2008-03-19  Luis Lavena  <luislavena@gmail.com>

	* lib/rubygems/package/tar_output.rb: Adapted code to use #wrap instead 
	of #new when dealing with Zlib::GzipWriter (fixes SEGV and warnings due
	GzipWriter object not being closed explicitly).

2008-03-12  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/indexer.rb:  Add latest_index.

2008-03-09  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/defaults.rb:  Add special case for RUBY_ENGINE constant
	when setting default gem dir.
	* Rakefile:  Add update_rubinius and diff_rubinius.

2008-03-08  Lincoln Stoll  <lstoll@lstoll.net>

	* lib/rubygems/server.rb:  Drop use of RDoc's TemplatePage in favor of
	ERB.

2008-03-04  Ryan Davis  <ryan@wrath.local>

	* lib/rubygems/remote_fetcher.rb: Moved #download from
	DependencyInstaller.
	* lib/rubygems/commands/fetch_command.rb: Updated to use #download.
	* lib/rubygems/dependency_installer.rb: install now takes name or dep.
	Renamed gather_specs_to_download to find_spec_by_name_and_version.
	Modifed #initialize to not take gem name or version.

2008-03-04  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/package*:  Removed #open_from_io and friends, switched
	to #open, no special handling for file names.
	* lib/rubygems/package/tar_output.rb:  Refactored ::open to use
	instance methods.
	* lib/rubygems/remote_fetcher.rb:  Print out number of requests made
	before connection reset.

2008-02-29  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/package/tar_reader/entry.rb:  Removed is_directory and
	is_file? in favor of file? and directory?.

2008-02-28  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/package.rb:  Broke up Tar bits into separate files.
	* lib/rubygems/package/tar_reader/entry.rb:  Don't copy TarHeader data
	into Entry, go through #header instead.  Better tests for
	TarReader::Entry.

2008-02-27  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_installer.rb:  Automatically fall back to